--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "scanjet",
-  "version": "1.0.0",
-  "description": "",
-  "main": "usb.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "usb": "^2.11.0"
-  }
+    "name": "scanjet",
+    "version": "1.0.0",
+    "description": "",
+    "main": "usb.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "sane": "^5.0.1",
+        "usb": "^2.11.0"
+    }
 }
